--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,12 +27,13 @@
             "dependsOn": [
                 "rust: cargo build",
             ],
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "panel": "dedicated",
-                "showReuseMessage": true,
-                "clear": false
+            "linux": {
+                "command": "python3",
+                "args": ["bld-deploy-rpi.py", "-t", "-d"],
+            },
+            "windows": {
+                "command": "python.exe",
+                "args": ["${workspaceFolder}\\bld-deploy-rpi.py", "-t", "-d"],
             },
             "isBackground": true,
             "problemMatcher": {
