--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -34,17 +34,17 @@
             ],
             "linux": {
                 "command": "python3",
-                "args": ["bld-deploy-rpi.py", "-t", "-r"],
+                "args": ["bld-deploy-remote.py", "-t", "-r"],
             },
             "windows": {
                 "command": "python.exe",
-                "args": ["${workspaceFolder}\\bld-deploy-rpi.py", "-t", "-r"],
+                "args": ["${workspaceFolder}\\bld-deploy-remote.py", "-t", "-r"],
             },
         },
         {
             "label": "rust: remote dbg with server",
             "type": "shell",
-            "command": "${workspaceFolder}/bld-deploy-rpi.py",
+            "command": "${workspaceFolder}/bld-deploy-remote.py",
             "args": ["-t", "-d"],
             "group": "none",
             "dependsOn": [
@@ -52,11 +52,11 @@
             ],
             "linux": {
                 "command": "python3",
-                "args": ["bld-deploy-rpi.py", "-t", "-d"],
+                "args": ["bld-deploy-remote.py", "-t", "-d"],
             },
             "windows": {
                 "command": "python.exe",
-                "args": ["${workspaceFolder}\\bld-deploy-rpi.py", "-t", "-d"],
+                "args": ["${workspaceFolder}\\bld-deploy-remote.py", "-t", "-d"],
             },
             "isBackground": true,
             "problemMatcher": {
@@ -78,7 +78,7 @@
         {
             "label": "rust: remote dbg external server",
             "type": "shell",
-            "command": "${workspaceFolder}/bld-deploy-rpi.py",
+            "command": "${workspaceFolder}/bld-deploy-remote.py",
             "args": ["-t"],
             "group": "none",
             "dependsOn": [
