--- a/.cargo/def-config.toml
+++ b/.cargo/def-config.toml
@@ -13,8 +13,9 @@
 # https://gnutoolchains.com/raspberry/
 
 # If you use a different cross-compiler, adapt this flag accordinlgy.
-linker = "armv8-rpi4-linux-gnueabihf-gcc"
+# linker = "armv8-rpi4-linux-gnueabihf-gcc"
 # linker = "arm-linux-gnueabihf-gcc"
+linker = "arm-none-linux-gnueabihf-gcc"
 
 ################################################################################
 # Runners
